# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_a/testsuites/unittest/config.gni")

jffs_include_dirs = [ "$TEST_UNITTEST_DIR/fs/jffs" ]

jffs_sources_entry = [ "$TEST_UNITTEST_DIR/fs/jffs/vfs_jffs_test.cpp" ]

jffs_sources_smoke = [
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_005.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_021.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_022.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_026.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_027.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_034.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_035.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_094.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_095.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_103.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_535.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/smoke/It_vfs_jffs_Dac_001.cpp",
]

jffs_sources_smoke = [
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_004.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_005.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_006.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_007.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_008.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_009.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_010.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_011.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_012.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_performance_013.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_004.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_005.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_006.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_007.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_008.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_009.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_010.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_011.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_012.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_014.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_015.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_016.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_017.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_018.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_019.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_020.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_021.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_022.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_023.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_024.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_025.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_026.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_027.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_028.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_029.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_030.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_031.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_032.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_033.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_034.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_035.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_036.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_037.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_038.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_039.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_040.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_041.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_042.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_043.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_044.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_045.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_046.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_047.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_048.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_049.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_050.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_051.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_052.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_053.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_301.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_302.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_303.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_304.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_305.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_306.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_307.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_308.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_309.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_310.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_311.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_312.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_313.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_314.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_fs_jffs_pressure_315.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_004.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_005.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_006.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_007.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_008.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_009.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_010.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_011.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_012.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_013.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_014.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_015.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_016.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_017.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_018.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_019.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_020.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_021.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_022.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_023.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_024.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_025.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_026.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_027.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_028.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_029.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_030.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_031.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_032.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_033.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_034.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_035.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_036.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_037.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_038.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_039.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_040.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_041.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_042.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_043.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_044.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_045.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_046.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_047.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_048.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_049.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_050.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_051.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_052.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_053.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_054.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_055.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_056.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_057.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_058.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_059.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_060.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_061.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_062.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/pressure/It_vfs_jffs_multipthread_063.cpp",
]

jffs_sources_full = [
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_test_faccessat_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_test_faccessat_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_test_fstatat_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_test_fstatat_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_test_fstatfs_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_test_fstatfs_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_004.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_100.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_101.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_106.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_112.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/it_test_fs_jffs_113.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_004.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_005.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_006.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_007.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_008.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_009.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_010.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_011.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_012.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_013.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_014.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_015.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_016.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_017.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_018.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_019.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_020.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_021.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_022.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_023.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_024.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_025.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_026.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_027.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_028.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_029.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_030.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_031.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_032.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_033.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_034.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_035.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_036.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_037.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_038.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_039.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_040.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_041.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_042.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_043.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_jffs_044.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_004.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_006.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_007.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_008.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_009.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_010.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_011.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_012.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_013.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_014.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_015.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_016.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_017.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_018.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_019.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_020.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_023.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_024.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_025.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_028.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_029.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_030.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_031.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_032.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_033.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_037.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_038.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_039.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_040.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_041.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_042.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_043.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_044.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_045.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_046.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_048.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_049.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_050.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_051.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_053.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_055.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_056.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_057.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_058.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_059.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_060.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_061.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_062.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_063.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_064.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_065.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_066.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_067.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_068.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_069.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_070.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_071.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_072.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_073.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_074.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_076.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_077.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_078.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_079.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_080.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_081.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_082.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_083.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_084.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_085.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_086.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_088.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_090.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_092.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_093.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_096.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_097.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_099.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_100.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_101.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_102.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_104.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_105.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_106.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_107.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_116.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_117.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_118.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_119.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_120.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_121.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_122.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_123.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_124.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_125.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_126.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_127.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_128.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_129.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_130.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_131.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_132.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_133.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_134.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_135.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_136.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_137.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_138.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_139.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_140.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_141.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_142.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_143.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_144.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_145.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_146.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_147.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_148.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_149.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_150.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_151.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_152.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_153.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_154.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_155.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_156.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_157.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_158.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_159.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_160.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_161.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_162.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_163.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_164.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_165.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_166.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_167.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_168.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_169.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_170.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_171.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_172.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_173.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_174.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_175.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_176.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_177.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_178.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_179.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_180.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_182.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_183.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_184.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_185.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_187.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_188.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_189.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_190.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_191.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_192.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_193.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_194.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_195.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_196.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_197.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_198.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_199.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_200.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_201.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_202.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_203.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_204.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_205.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_206.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_207.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_208.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_209.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_210.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_211.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_212.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_213.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_214.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_215.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_216.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_217.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_218.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_219.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_220.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_221.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_222.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_223.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_224.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_225.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_226.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_227.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_228.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_229.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_230.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_231.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_232.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_233.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_234.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_235.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_236.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_237.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_238.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_239.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_240.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_241.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_242.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_243.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_244.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_245.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_246.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_247.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_248.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_249.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_250.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_251.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_252.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_253.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_254.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_255.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_256.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_257.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_258.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_259.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_260.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_261.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_262.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_263.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_264.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_265.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_266.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_267.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_268.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_269.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_270.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_271.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_272.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_273.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_274.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_275.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_276.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_277.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_278.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_279.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_280.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_281.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_282.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_283.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_284.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_285.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_286.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_287.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_288.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_289.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_290.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_291.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_292.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_293.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_294.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_295.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_296.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_297.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_298.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_299.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_300.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_301.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_302.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_303.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_304.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_305.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_306.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_307.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_308.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_309.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_310.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_311.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_312.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_313.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_314.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_315.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_316.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_317.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_318.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_319.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_320.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_321.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_322.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_323.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_324.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_325.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_326.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_327.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_328.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_329.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_330.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_331.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_332.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_333.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_334.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_335.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_336.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_337.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_338.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_339.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_340.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_342.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_343.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_344.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_346.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_352.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_353.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_354.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_355.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_356.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_357.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_358.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_359.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_360.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_361.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_362.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_364.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_365.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_366.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_367.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_368.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_369.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_370.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_371.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_372.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_373.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_374.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_375.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_376.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_377.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_378.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_379.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_380.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_381.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_382.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_383.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_384.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_385.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_386.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_387.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_388.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_389.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_390.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_391.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_392.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_393.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_394.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_395.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_396.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_397.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_398.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_399.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_400.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_401.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_402.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_403.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_404.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_405.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_406.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_407.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_408.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_409.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_410.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_411.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_412.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_413.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_414.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_415.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_416.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_417.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_418.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_419.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_420.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_421.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_422.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_423.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_424.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_425.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_426.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_427.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_428.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_429.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_430.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_431.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_432.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_433.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_434.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_435.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_454.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_455.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_456.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_457.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_458.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_459.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_460.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_461.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_462.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_487.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_488.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_489.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_490.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_491.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_492.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_493.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_494.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_495.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_496.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_497.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_498.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_499.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_500.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_501.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_502.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_503.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_504.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_505.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_506.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_507.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_508.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_509.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_510.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_511.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_512.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_513.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_514.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_515.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_516.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_517.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_518.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_519.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_520.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_521.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_522.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_523.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_524.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_526.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_528.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_529.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_530.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_531.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_532.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_533.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_534.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_541.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_542.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_543.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_544.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_545.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_546.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_547.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_548.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_549.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_550.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_551.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_552.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_553.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_554.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_555.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_556.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_557.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_560.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_562.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_563.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_564.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_565.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_566.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_567.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_568.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_569.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_570.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_571.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_572.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_573.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_574.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_583.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_584.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_586.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_589.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_590.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_591.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_592.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_593.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_594.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_595.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_596.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_603.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_636.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_643.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_644.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_645.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_646.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_648.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_649.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_650.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_651.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_652.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_653.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_654.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_655.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_656.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_663.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_664.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_665.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_666.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_668.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_669.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_670.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_671.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_672.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_673.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_674.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_675.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_676.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_690.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_694.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_696.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_697.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_700.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_701.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_807.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_jffs_808.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_link_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_link_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_link_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_linkat_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_linkat_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_linkat_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_readlink_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_symlink_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_symlink_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_symlink_003.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_symlinkat_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_mount_rdonly_001.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_mount_rdonly_002.cpp",
  "$TEST_UNITTEST_DIR/fs/jffs/full/It_vfs_test_mount_rdonly_003.cpp",
]
